# pki

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DASHBOARD-IMPLEMENTATION.md  Dockerfile  NOTIFICATION-SYSTEM-PLAN.md  WEBHOOK-IMPLEMENTATION.md  azure-pipelines.yml  build.sh  convert-to-html.sh  pki.spec
.github/workflows/: acme-basic-test.yml  acme-clone-test.yml  acme-existing-nssdb-test.yml  acme-postgresql-test.yml  acme-separate-test.yml  acme-switchover-test.yml  acme-tests.yml  build.yml  ca-admin-user-test.yml  ca-basic-test.yml  ca-cert-revocation-test.yml  ca-clone-hsm-test.yml  ca-clone-replicated-ds-test.yml  ca-clone-secure-ds-test.yml  ca-clone-shared-ds-test.yml  ca-clone-ssnv1-test.yml  ca-clone-ssnv2-test.yml  ca-clone-test.yml  ca-clone-tests.yml  ca-cmc-shared-token-test.yml  ca-container-basic-test.yml  ca-container-existing-certs-test.yml  ca-container-existing-config-test.yml  ca-container-migration-test.yml  ca-container-tests.yml  ca-crl-test.yml  ca-ds-connection-test.yml  ca-ecc-test.yml  ca-existing-certs-test.yml  ca-existing-config-test.yml  ca-hsm-test.yml  (+127 more)
base/: CMakeLists.txt  pom.xml
pki-rust-poc/: COMPARISON.md  FILE-GUIDE.md  MIGRATION-PLAN.md  NEXT-STEPS.md  README.md
pki-rust-poc/est-poc/: .gitignore  BUILD.md  BUILDING-NOTES.md  Cargo.toml  Dockerfile  FIXES.md  Makefile  README.md
pki-rust-poc/est-poc/examples/: estauthz
pki-rust-poc/est-poc/examples/config/: authorizer.conf  backend.conf  realm.conf  server.conf
pki-rust-poc/est-poc/src/: auth.rs  backend.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs
(+602 files in other folders)
