[package]
name = "pki-est"
version = "0.1.0"
edition = "2021"
authors = ["Dogtag PKI Team"]
description = "EST (Enrollment over Secure Transport) subsystem in Rust"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "auth"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography and certificates
x509-parser = "0.16"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2.0"
base64 = "0.22"
pem = "3.0"

# HTTP client (for CA backend)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.5"
http = "1.0"

[dev-dependencies]

[[bin]]
name = "pki-est-server"
path = "src/main.rs"
